--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "dependencies": {
     "serve": "^14.2.1"
   },
+  
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-  }
+    "name": "myapp",
+    "description": "a really cool app",
+    "version": "1.0.0",
+    "engines": {
+      "node": "12.11.1"
+      }
+    }
+
+  
+
+  
 }
+
+  
+  
